# agentic-ai-project

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  security.yml  test.yml
agentic_ai_project/: __init__.py  cli.py  config.py  genai_client.py  validation.py
agentic_ai_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_genai_client.py
